[package]
name = "cmaes-lbfgsb"
version = "0.1.0"
edition = "2021"
authors = ["Shlomo Kraus"]
description = "High-performance CMA-ES and L-BFGS-B optimization algorithms for constrained and unconstrained problems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnsqd/cmaes-lbfgsb"
homepage = "https://github.com/gnsqd/cmaes-lbfgsb"
documentation = "https://docs.rs/cmaes-lbfgsb"
readme = "README.md"
keywords = ["optimization", "cmaes", "lbfgs", "finance", "calibration"]
categories = ["algorithms", "mathematics", "science"]
exclude = ["target/", ".git/", "*.log"]

[dependencies]
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
rayon = "1.8"
